[Layout / spacing fix] Cedric's page
 - [X] Reworked bottom CTAs and bottom spacing to prevent the profile picture from being cropped

--- a/style.css
+++ b/style.css
@@ -162,6 +162,10 @@ body {
   >.ctaWrapper.twin {
     display: flex;
     gap: 20px;
+    >a.exception {
+      margin-bottom: 5px;
+      padding: 10px;
+     }
   }
   >.cta {
    background-color: var(--light);
